--- a/src/app/components/main/main.component.html
+++ b/src/app/components/main/main.component.html
@@ -1,7 +1,10 @@
 
+
 <div id="top"></div>
 <div class="card-row">
     <app-card *ngFor="let char of characters" class="card-container" [characterData]="char"></app-card>
   </div>
+  <div class="button-page-container"> 
   <button (click)="prevPage()">Indietro</button>
   <button (click)="nextPage()">avanti</button>
+</div>
