--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,4 @@
-/* You can add global styles to this file, and also import other style files */
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&family=Leckerli+One&family=MedievalSharp&family=Poppins:wght@200;300;400;500;600;800;900&display=swap');
+body{
+    background-color: rgb(29, 29, 29);
+}
