--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -4,7 +4,7 @@
     </div>
     <div class="card-content">
       <div class="card-header">
-        <button  (click)="select()">
+        <button  (click)="select(characterData.id)">
           <h3 class="card-name">{{ characterData.name }}</h3>
         </button>
         <span [ngClass]="{'is-alive': characterData.status === 'Alive', 'is-not-alive': characterData.status === 'Dead'}"></span>
