--- a/src/app/components/card/card.component.scss
+++ b/src/app/components/card/card.component.scss
@@ -70,6 +70,8 @@ h3{
   }
 
   .card-header{
+    display: flex;
+   
     margin-bottom: 40px;
   }
 
@@ -96,4 +98,8 @@ h3{
   
   a{
     cursor: pointer;
+  }
+
+  .card-name{
+    width: 100%;
   }
