--- a/src/app/components/episodes/episodes.component.html
+++ b/src/app/components/episodes/episodes.component.html
@@ -2,6 +2,15 @@
     <h1>{{ episodeDetails.name }}</h1>
     <p>Air Date: {{ episodeDetails.air_date }}</p>
     <p>Episode: {{ episodeDetails.episode }}</p>
-    <!-- Aggiungi altri dettagli qui -->
+
+    <!-- <div *ngIf="char && char.length > 0">
+      <ul>
+        <li *ngFor="let episode of episodes">
+         
+          <a [routerLink]="['/episode', episode.id]" (click)="select(episode)">{{ episode.name }}</a>
+   </li>
+      </ul>
+    </div> -->
+   
   </div>
   
