--- a/src/app/components/episodes/episodes.component.html
+++ b/src/app/components/episodes/episodes.component.html
@@ -1,7 +1,9 @@
+<div class="main-details"> 
+
 <div class="details-card-page" *ngIf="episodeDetails">
   <h1>{{ episodeDetails.name }}</h1>
-  <p>Air Date: {{ episodeDetails.air_date }}</p>
-  <p>Episode: {{ episodeDetails.episode }}</p>
+  <p>Data di messa in Onda: {{ episodeDetails.air_date }}</p>
+  <p>Episodio: {{ episodeDetails.episode }}</p>
   
   <div *ngIf="characters && characters.length > 0">
     <ul>
@@ -10,4 +12,6 @@
       </li>
     </ul>
   </div>
+</div>
+
 </div>
