--- a/src/app/components/header/header.component.scss
+++ b/src/app/components/header/header.component.scss
@@ -8,5 +8,22 @@
     font-family: 'Poppins', sans-serif;
     font-size: 50px;
     font-weight: 900;
-    margin-bottom: 40px;
+    
+}
+
+@media(max-width:500px){
+
+.header{
+    width: 100vw;
+    font-size: 20px;
+    height: 20%;
+    margin: 0;
+    text-align: center;
+}
+
+
+
+
+
+
 }
