--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,4 +4,5 @@
 
         <h1> The Rick and Morty API </h1>
     </div>
+    <div class="img-header"> <img src="/src/assets/header-img.jpeg" alt=""> </div>
 </header>
